# huobi_trade

./: CMakeLists.txt  README.md
hbapp/: CMakeLists.txt
hbapp/huobi_trade/: CMakeLists.txt  README.md  start.sh  trade.cpp  trade.service
plugins/: CMakeLists.txt
plugins/grid_trade_plugin/: CMakeLists.txt  delvier_order.cpp  grid_trade_plugin.cpp  grid_trade_plugin_impl.cpp  new_order.cpp
plugins/grid_trade_plugin/include/hb/grid_trade_plugin/: delvier_order.h  grid_trade_error.h  grid_trade_plugin.h  grid_trade_plugin_impl.h  new_order.h
plugins/grid_trade_plugin/test/: CMakeLists.txt  main.cpp
plugins/trade_api_plugin/: CMakeLists.txt  trade_api_plugin.cpp  trade_api_plugin_impl.cpp
plugins/trade_api_plugin/include/hb/trade_api_plugin/: ApiSignature.h  http2.h  trade_api_error.h  trade_api_plugin.h  trade_api_plugin_impl.h
plugins/trade_api_plugin/test/: CMakeLists.txt  main.cpp
plugins/trade_db_plugin/: CMakeLists.txt  README.md  create_sql.sh  table.sql  trade_db_plugin.cpp  trade_db_plugin_impl.cpp
plugins/trade_db_plugin/include/hb/trade_db_plugin/: trade_db_error.h  trade_db_plugin.h  trade_db_plugin_api.h  trade_db_plugin_impl.h  trade_db_types.h
plugins/trade_db_plugin/test/: CMakeLists.txt  main.cpp
